--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,2 +1,2 @@
-WALLET_DIR="/home/$(whoami)/TrumpCoin"  # trumpcoin folder
-LOG_DIR="/tmp"
+WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
+LOG_DIR="/home/"$(whoami)"/node_data" # node data folder
