--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,3 +1,3 @@
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
-LOG_DIR="/home/"$(whoami)"/node_data"  # node data folder or just use /tmp/
+LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
