--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,3 +1,4 @@
+WALLET_LOG_DIR="/tmp"                  # debug.log directory
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
 LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
