--- a/pitrump.conf
+++ b/pitrump.conf
@@ -2,3 +2,4 @@ WALLET_LOG_DIR="/tmp"                  # debug.log directory
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
 LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
+KEEP_BACKUPS="0"                       # keep wallet backups
