--- a/pitrump.conf
+++ b/pitrump.conf
@@ -3,3 +3,4 @@ WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
 LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
 KEEP_BACKUPS="0"                       # keep wallet backups
+UPDATE_REPO="0"                        # auto update repository
