--- a/pitrump.conf
+++ b/pitrump.conf
@@ -4,3 +4,4 @@ LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
 KEEP_BACKUPS="0"                       # keep wallet backups
 UPDATE_REPO="0"                        # auto update repository
+GRAPH_STATS="0"                        # rrdtool apache2 php
