--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,7 +1,9 @@
+# trump-node configuration
+
 WALLET_LOG_DIR="/tmp"                  # debug.log directory
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
 LOG_DIR="/tmp"                         # node data folder
 DARKMODE="0"                           # darkmode 0/1 (default 0)
-KEEP_BACKUPS="0"                       # keep wallet backups
+KEEP_BACKUPS="1"                       # keep wallet backups
 UPDATE_REPO="0"                        # auto update repository
 GRAPH_STATS="0"                        # rrdtool apache2 php
