--- a/pitrump.conf
+++ b/pitrump.conf
@@ -7,3 +7,4 @@ DARKMODE="0"                           # darkmode 0/1 (default 0)
 KEEP_BACKUPS="1"                       # keep wallet backups
 UPDATE_REPO="0"                        # auto update repository
 GRAPH_STATS="0"                        # rrdtool apache2 php
+GRAPH_TIME="1d"                        # 1d = one day, 1w = one week
