--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,10 +1,25 @@
-# trump-node configuration
+# node configuration
 
-WALLET_LOG_DIR="/tmp"                  # debug.log directory
-WALLET_DIR="/home/$(whoami)/TrumpCoin" # trumpcoin folder
-LOG_DIR="/tmp"                         # node data folder
-DARKMODE="0"                           # darkmode 0/1 (default 0)
-KEEP_BACKUPS="1"                       # keep wallet backups
-UPDATE_REPO="0"                        # auto update repository
-GRAPH_STATS="0"                        # rrdtool apache2 php
-GRAPH_TIME="1d"                        # 1d = one day, 1w = one week
+# debug.log directory
+WALLET_LOG_DIR="/tmp"
+
+# wallet folder
+WALLET_DIR="/home/$(whoami)/TrumpCoin"
+
+# script data folder (node_data)
+LOG_DIR="/tmp"
+
+# darkmode/trumpmode 1/0 (default 1)
+DARKMODE="1"
+
+# keep wallet backups (/backups)
+KEEP_BACKUPS="1"
+
+# auto update repository (trump-node)
+UPDATE_REPO="0"
+
+# rrdtool apache2 php (web monitoring)
+GRAPH_STATS="0"
+
+# 1d = one day, 1w = one week, 0 = Auto (graph sizing)
+GRAPH_TIME="0"
