--- a/pitrump.conf
+++ b/pitrump.conf
@@ -9,6 +9,9 @@ WALLET_DIR="/home/$(whoami)/TrumpCoin"
 # script data folder (node_data)
 LOG_DIR="/tmp"
 
+# auto combine, stake split threshold(s)
+AUTO_POS="0"
+
 # darkmode/trumpmode 1/0 (default 1)
 DARKMODE="1"
 
