--- a/pitrump.conf
+++ b/pitrump.conf
@@ -12,6 +12,9 @@ LOG_DIR="/tmp"
 # auto combine, stake split threshold(s)
 AUTO_POS="0"
 
+# auto pos limit (average minutes between inputs)
+POS_LIMIT="963"
+
 # darkmode/trumpmode 1/0 (default 1)
 DARKMODE="1"
 
