--- a/pitrump.conf
+++ b/pitrump.conf
@@ -12,7 +12,7 @@ LOG_DIR="/tmp"
 # auto combine, stake split threshold(s)
 AUTO_POS="0"
 
-# auto pos limit (average minutes between inputs)
+# auto pos limit (max minutes to wait on pos)
 POS_LIMIT="1440"
 
 # darkmode/trumpmode 1/0 (default 1)
