--- a/pitrump.conf
+++ b/pitrump.conf
@@ -26,3 +26,8 @@ GRAPH_STATS="0"
 
 # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
 GRAPH_TIME="0"
+
+# proxy (tor)
+PROXY="127.0.0.1:9050"
+
+# END
