--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,33 +1,15 @@
 # node configuration
 
-# debug.log directory
-WALLET_LOG_DIR="/tmp"
-
-# wallet folder
-WALLET_DIR="/home/$(whoami)/TrumpCoin"
-
-# script data folder (node_data)
-LOG_DIR="/tmp"
-
-# auto combine, stake split threshold(s)
-AUTO_POS="0"
-
-# darkmode/trumpmode 1/0 (default 1)
-DARKMODE="1"
-
-# keep wallet backups (/backups)
-KEEP_BACKUPS="1"
-
-# auto update repository (trump-node)
-UPDATE_REPO="0"
-
-# rrdtool apache2 php (web monitoring)
-GRAPH_STATS="0"
-
-# 1d = one day, 1w = one week, 0 = Auto (graph sizing)
-GRAPH_TIME="0"
-
-# proxy (tor)
-PROXY="127.0.0.1:9050"
+WALLET_LOG_DIR="/tmp"                  # debug.log directory
+WALLET_DIR="/home/$(whoami)/TrumpCoin" # wallet folder
+LOG_DIR="/tmp"                         # script data folder (node_data)
+AUTO_POS="0"                           # auto combine, stake split threshold(s)
+POS_LIMIT="1440"                       # average input age for auto_pos
+DARKMODE="1"                           # darkmode/trumpmode 1/0 (default 1)
+KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
+UPDATE_REPO="0"                        # auto update repository (trump-node)
+GRAPH_STATS="0"                        # rrdtool apache2 php (web monitoring)
+GRAPH_TIME="0"                         # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
+PROXY="127.0.0.1:9050"                 # proxy (tor)
 
 # END
