--- a/pitrump.conf
+++ b/pitrump.conf
@@ -4,12 +4,14 @@ WALLET_LOG_DIR="/tmp"                  # debug.log directory
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # wallet folder
 LOG_DIR="/tmp"                         # script data folder (node_data)
 AUTO_POS="0"                           # auto combine, stake split threshold(s)
-POS_LIMIT="1440"                       # average input age for auto_pos
+POS_LIMIT="1440"                       # average input age for auto_pos limit
 DARKMODE="1"                           # darkmode/trumpmode 1/0 (default 1)
 KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
 UPDATE_REPO="0"                        # auto update repository (trump-node)
 GRAPH_STATS="0"                        # rrdtool apache2 php (web monitoring)
 GRAPH_TIME="0"                         # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
 PROXY="127.0.0.1:9050"                 # proxy (tor)
+HIDE_BALANCE="0"                       # hide token balance
+HIDE_WAN="0"                           # hide wan address
 
 # END
