--- a/pitrump.conf
+++ b/pitrump.conf
@@ -7,11 +7,15 @@ AUTO_POS="0"                           # auto combine, stake split threshold(s)
 POS_LIMIT="1440"                       # average input age for auto_pos limit
 DARKMODE="1"                           # darkmode/trumpmode 1/0 (default 1)
 KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
+KEEP_DEBUG="0"                         # keep debug log
 UPDATE_REPO="0"                        # auto update repository (trump-node)
 GRAPH_STATS="0"                        # rrdtool apache2 php (web monitoring)
 GRAPH_TIME="0"                         # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
 PROXY="127.0.0.1:9050"                 # proxy (tor)
+TOR_CONTROL=127.0.0.1:9051             # proxy (torcontrol)
+EXTERNALIP=""                          # tor onion externalip.onion
 HIDE_BALANCE="0"                       # hide token balance
 HIDE_WAN="0"                           # hide wan address
+RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
 
 # END
