--- a/pitrump.conf
+++ b/pitrump.conf
@@ -17,5 +17,6 @@ EXTERNALIP=""                          # tor onion externalip.onion
 HIDE_BALANCE="0"                       # hide token balance
 HIDE_WAN="0"                           # hide wan address
 RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
+MAX_P2P="125"                          # max connections allowed (default 125)
 
 # END
