--- a/pitrump.conf
+++ b/pitrump.conf
@@ -1,6 +1,7 @@
 # node configuration
 
 WALLET_LOG_DIR="/tmp"                  # debug.log directory
+DATA_DIR="/home/$(whoami)/TrumpCoin"   # data directory (blockchain)
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # wallet folder
 LOG_DIR="/tmp"                         # script data folder (node_data)
 AUTO_POS="0"                           # auto combine, stake split threshold(s)
