--- a/pitrump.conf
+++ b/pitrump.conf
@@ -4,8 +4,8 @@ WALLET_LOG_DIR="/tmp"                  # debug.log directory
 DATA_DIR="/home/$(whoami)/TrumpCoin"   # data directory (blockchain)
 WALLET_DIR="/home/$(whoami)/TrumpCoin" # wallet folder
 LOG_DIR="/tmp"                         # script data folder (node_data)
-AUTO_POS="0"                           # auto combine, stake split threshold(s)
-POS_LIMIT="1440"                       # average input age for auto_pos limit
+AUTO_POS="0"                           # auto combine, stake split threshold(s) 1/0 (default 0)
+POS_LIMIT="1440"                       # average input age for auto_pos limit (default 1440 minutes)
 DARKMODE="1"                           # darkmode/trumpmode 1/0 (default 1)
 KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
 KEEP_DEBUG="0"                         # keep debug log
