--- a/pitrump.conf
+++ b/pitrump.conf
@@ -19,5 +19,6 @@ HIDE_BALANCE="0"                       # hide token balance
 HIDE_WAN="0"                           # hide wan address
 RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
 MAX_P2P="125"                          # max connections allowed (default 125)
+NO_DISPLAY="0"                         # run without display (warden runs everything)
 
 # END
