--- a/pinode.conf
+++ b/pinode.conf
@@ -1,4 +1,4 @@
-# node configuration
+# node configuration ###########################################################
 
 WALLET_LOG_DIR="/tmp"                  # debug.log directory
 DATA_DIR="/home/$(whoami)/TrumpCoin"   # data directory (blockchain)
@@ -18,5 +18,10 @@ HIDE_BALANCE="0"                       # hide token balance
 HIDE_WAN="0"                           # hide wan address
 RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
 MAX_P2P="125"                          # max connections allowed (default 125)
+
+# wallet daemon & client variables #############################################
+
+WALLET_DAEMON="trumpcoind"
+WALLET_CLIENT="trumpcoin-cli"
 
 # END
