--- a/pinode.conf
+++ b/pinode.conf
@@ -8,7 +8,7 @@ AUTO_POS="0"                           # auto combine, stake split threshold(s) 
 POS_LIMIT="1440"                       # average input age for auto_pos limit (default 1440 minutes)
 KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
 KEEP_DEBUG="0"                         # keep debug log
-UPDATE_REPO="0"                        # auto update repository (trump-node)
+UPDATE_REPO="0"                        # auto update repository (pi-node)
 GRAPH_STATS="0"                        # rrdtool apache2 php (web monitoring)
 GRAPH_TIME="0"                         # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
 PROXY="127.0.0.1:9050"                 # proxy (tor)
