--- a/pinode.conf
+++ b/pinode.conf
@@ -19,9 +19,13 @@ HIDE_WAN="0"                           # hide wan address
 RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
 MAX_P2P="125"                          # max connections allowed (default 125)
 
-# wallet daemon & client variables #############################################
+# wallet daemon & client, api variables ########################################
 
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
+
+COING_API="freedomcoin"
+COINM_API="trumpcoin"
+EXCHA_API="usd"
 
 # END
