--- a/pinode.conf
+++ b/pinode.conf
@@ -21,11 +21,13 @@ MAX_P2P="125"                          # max connections allowed (default 125)
 
 # wallet daemon & client, api variables ########################################
 
-WALLET_DAEMON="trumpcoind"
-WALLET_CLIENT="trumpcoin-cli"
-
 COING_API="freedomcoin"
 COINM_API="trumpcoin"
 EXCHA_API="usd"
+
+WALLET_DAEMON="trumpcoind"
+WALLET_CLIENT="trumpcoin-cli"
+WALLET_RELEASE="https://github.com/trumpcoinsupport/TrumpCoin/releases/latest"
+WALLET_DOWNLOAD="https://github.com/trumpcoinsupport/TrumpCoin/releases/download"
 
 # END
