--- a/pinode.conf
+++ b/pinode.conf
@@ -27,6 +27,7 @@ EXCHA_API="usd"
 
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
+WALLET_CONFIG="trumpcoin.conf"
 WALLET_RELEASE="https://github.com/trumpcoinsupport/TrumpCoin/releases/latest"
 WALLET_DOWNLOAD="https://github.com/trumpcoinsupport/TrumpCoin/releases/download"
 
