--- a/pinode.conf
+++ b/pinode.conf
@@ -1,23 +1,23 @@
 # node configuration ###########################################################
 
-WALLET_LOG_DIR="/tmp"                  # debug.log directory
-DATA_DIR="/home/$(whoami)/TrumpCoin"   # data directory (blockchain)
-WALLET_DIR="/home/$(whoami)/TrumpCoin" # wallet folder
-LOG_DIR="/tmp"                         # script data folder (node_data)
-AUTO_POS="0"                           # auto combine, stake split threshold(s) 1/0 (default 0)
-POS_LIMIT="1440"                       # average input age for auto_pos limit (default 1440 minutes)
-KEEP_BACKUPS="1"                       # keep wallet backups (/backups)
-KEEP_DEBUG="0"                         # keep debug log
-UPDATE_REPO="0"                        # auto update repository (pi-node)
-GRAPH_STATS="0"                        # rrdtool apache2 php (web monitoring)
-GRAPH_TIME="0"                         # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
-PROXY="127.0.0.1:9050"                 # proxy (tor)
-TOR_CONTROL=127.0.0.1:9051             # proxy (torcontrol)
-EXTERNALIP=""                          # tor onion externalip.onion
-HIDE_BALANCE="0"                       # hide token balance
-HIDE_WAN="0"                           # hide wan address
-RPC_IP="127.0.0.1"                     # rpc ip address (default localhost/127.0.0.1)
-MAX_P2P="125"                          # max connections allowed (default 125)
+WALLET_LOG_DIR="/tmp"               # debug.log directory
+DATA_DIR="/home/$(whoami)/Wallet"   # data directory (blockchain)
+WALLET_DIR="/home/$(whoami)/Wallet" # wallet folder
+LOG_DIR="/tmp"                      # script data folder (node_data)
+AUTO_POS="0"                        # auto combine, stake split threshold(s) 1/0 (default 0)
+POS_LIMIT="1440"                    # average input age for auto_pos limit (default 1440 minutes)
+KEEP_BACKUPS="1"                    # keep wallet backups (/backups)
+KEEP_DEBUG="0"                      # keep debug log
+UPDATE_REPO="0"                     # auto update repository (pi-node)
+GRAPH_STATS="0"                     # rrdtool apache2 php (web monitoring)
+GRAPH_TIME="0"                      # 1d = one day, 1w = one week, 0 = Auto (graph sizing)
+PROXY="127.0.0.1:9050"              # proxy (tor)
+TOR_CONTROL=127.0.0.1:9051          # proxy (torcontrol)
+EXTERNALIP=""                       # tor onion externalip.onion
+HIDE_BALANCE="0"                    # hide token balance
+HIDE_WAN="0"                        # hide wan address
+RPC_IP="127.0.0.1"                  # rpc ip address (default localhost/127.0.0.1)
+MAX_P2P="125"                       # max connections allowed (default 125)
 
 # wallet daemon & client, api variables ########################################
 
