--- a/pinode.conf
+++ b/pinode.conf
@@ -25,6 +25,7 @@ COING_API="freedomcoin"
 COINM_API="trumpcoin"
 EXCHA_API="usd"
 
+WALLET_NAME="TrumpCoin"
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
 WALLET_CONFIG="trumpcoin.conf"
