--- a/pinode.conf
+++ b/pinode.conf
@@ -29,7 +29,8 @@ WALLET_NAME="TrumpCoin"
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
 WALLET_CONFIG="trumpcoin.conf"
+WALLET_MASTER="patriotnode.conf"
 WALLET_RELEASE="https://github.com/trumpcoinsupport/TrumpCoin/releases/latest"
 WALLET_DOWNLOAD="https://github.com/trumpcoinsupport/TrumpCoin/releases/download"
 
-# END
+# END 1645201204
