--- a/pinode.conf
+++ b/pinode.conf
@@ -21,9 +21,9 @@ MAX_P2P="125"                       # max connections allowed (default 125)
 
 # wallet daemon & client, api variables ########################################
 
-COING_API="freedomcoin"
-COINM_API="trumpcoin"
-EXCHA_API="usd"
+COINM_API="trumpcoin"   # coinmarketcap
+EXCHA_API="usd"         # coingecko pair
+COING_API="freedomcoin" # coingecko
 
 WALLET_NAME="TrumpCoin"
 WALLET_DAEMON="trumpcoind"
