--- a/pinode.conf
+++ b/pinode.conf
@@ -25,6 +25,7 @@ COINM_API="trumpcoin"   # coinmarketcap
 EXCHA_API="usd"         # coingecko pair
 COING_API="freedomcoin" # coingecko
 
+WALLET_ACTIVE="480"
 WALLET_NAME="TrumpCoin"
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
@@ -33,4 +34,4 @@ WALLET_MASTER="patriotnode.conf"
 WALLET_RELEASE="https://github.com/trumpcoinsupport/TrumpCoin/releases/latest"
 WALLET_DOWNLOAD="https://github.com/trumpcoinsupport/TrumpCoin/releases/download"
 
-# END 1645201204
+# END 1645220338
