--- a/pinode.conf
+++ b/pinode.conf
@@ -4,7 +4,7 @@ WALLET_LOG_DIR="/tmp"               # debug.log directory
 DATA_DIR="/home/$(whoami)/Wallet"   # data directory (blockchain)
 WALLET_DIR="/home/$(whoami)/Wallet" # wallet folder
 LOG_DIR="/tmp"                      # script data folder (node_data)
-AUTO_POS="0"                        # auto combine, stake split threshold(s) 1/0 (default 0)
+AUTO_POS="0"                        # auto combine, stake split thresholds 1/0 (default 0)
 POS_LIMIT="1440"                    # average input age for auto_pos limit (default 1440 minutes)
 KEEP_BACKUPS="1"                    # keep wallet backups (/backups)
 KEEP_DEBUG="0"                      # keep debug log
