--- a/pinode.conf
+++ b/pinode.conf
@@ -31,7 +31,8 @@ WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
 WALLET_CONFIG="trumpcoin.conf"
 WALLET_MASTER="patriotnode.conf"
+WALLET_SOURCE="https://github.com/trumpcoinsupport/TrumpCoin/archive/refs/tags"
 WALLET_RELEASE="https://github.com/trumpcoinsupport/TrumpCoin/releases/latest"
 WALLET_DOWNLOAD="https://github.com/trumpcoinsupport/TrumpCoin/releases/download"
 
-# END 1645220338
+# END 1645481912
