--- a/pinode.conf
+++ b/pinode.conf
@@ -25,7 +25,7 @@ COINM_API="trumpcoin"   # coinmarketcap
 EXCHA_API="usd"         # coingecko pair
 COING_API="freedomcoin" # coingecko
 
-WALLET_ACTIVE="480"
+WALLET_ACTIVE="480" # when coins are stakeable
 WALLET_NAME="TrumpCoin"
 WALLET_DAEMON="trumpcoind"
 WALLET_CLIENT="trumpcoin-cli"
