--- a/pinode.conf
+++ b/pinode.conf
@@ -26,13 +26,13 @@ EXCHA_API="usd"         # coingecko pair
 COING_API="freedomcoin" # coingecko
 
 WALLET_ACTIVE="480" # when coins are stakeable
-WALLET_NAME="TrumpCoin"
-WALLET_DAEMON="trumpcoind"
-WALLET_CLIENT="trumpcoin-cli"
-WALLET_CONFIG="trumpcoin.conf"
+WALLET_NAME="FreedomCoin"
+WALLET_DAEMON="freedomcoind"
+WALLET_CLIENT="freedomcoin-cli"
+WALLET_CONFIG="freedomcoin.conf"
 WALLET_MASTER="patriotnode.conf"
-WALLET_SOURCE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/archive/refs/tags"
-WALLET_RELEASE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/releases"
+WALLET_SOURCE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/refs/tags"
+WALLET_RELEASE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/releases/latest"
 WALLET_DOWNLOAD="https://github.com/FreedomCoin-Project/FreedomCoin-Core/releases/download"
 
-# END 1646975928
+# END 1647648101
