--- a/pinode.conf
+++ b/pinode.conf
@@ -4,7 +4,7 @@ WALLET_LOG_DIR="/tmp"           # debug.log directory
 DATA_DIR="/home/$(whoami)/node" # data directory (blockchain)
 WALLET_DIR="/usr/local/bin/"    # client and daemon directory
 LOG_DIR="/tmp"                  # script data folder (node_data)
-AUTO_POS="0"                    # auto combine, stake split thresholds 0/1/2 (default 0)
+AUTO_POS="0"                    # auto combine, stake split thresholds 0/1 (default 0)
 POS_LIMIT="1440"                # average input age for auto_pos limit (default 1440 minutes)
 KEEP_BACKUPS="1"                # keep wallet backups (/backups)
 KEEP_DEBUG="0"                  # keep debug log
@@ -35,4 +35,4 @@ WALLET_SOURCE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/archive/r
 WALLET_RELEASE="https://github.com/FreedomCoin-Project/FreedomCoin-Core/releases/latest"
 WALLET_DOWNLOAD="https://github.com/FreedomCoin-Project/FreedomCoin-Core/releases/download"
 
-# END 1647648101
+# END 1648818142
