--- a/pinode.conf
+++ b/pinode.conf
@@ -5,7 +5,7 @@ DATA_DIR="/home/$(whoami)/node" # data directory (blockchain)
 WALLET_DIR="/usr/local/bin/"    # client and daemon directory
 LOG_DIR="/tmp"                  # script data folder (node_data)
 AUTO_POS="0"                    # auto combine, stake split thresholds 0/1 (default 0)
-AUTO_RULE="0.45"                # if AUTO_POS=1 then % of average difficulty
+AUTO_RULE="1"                   # if AUTO_POS=1 then % of average difficulty (1=100%, 0.10=10%)
 POS_LIMIT="1440"                # average input age for auto_pos limit (default 1440 minutes)
 KEEP_BACKUPS="1"                # keep wallet backups (/backups)
 KEEP_DEBUG="0"                  # keep debug log
