--- a/pinode.conf
+++ b/pinode.conf
@@ -2,7 +2,7 @@
 
 WALLET_LOG_DIR="/tmp"           # debug.log directory
 DATA_DIR="/home/$(whoami)/node" # data directory (blockchain)
-WALLET_DIR="/usr/local/bin/"    # client and daemon directory
+WALLET_DIR="/usr/local/bin"     # client and daemon directory
 LOG_DIR="/tmp"                  # script data folder (node_data)
 AUTO_POS="0"                    # auto combine, stake split thresholds 0/1 (default 0)
 AUTO_RULE="0.35"                # if AUTO_POS=1 then % of average difficulty (1=100%, 0.10=10%)
