--- a/pinode.conf
+++ b/pinode.conf
@@ -22,9 +22,9 @@ MAX_P2P="125"                   # max connections allowed (default 125)
 
 # wallet daemon & client, api variables ########################################
 
-COINM_API="trumpcoin"   # coinmarketcap
-EXCHA_API="usd"         # coingecko pair
-COING_API="freedomcoin" # coingecko
+COINM_API="freedomcoin-freed" # coinmarketcap
+EXCHA_API="usd"               # coingecko pair
+COING_API="freedomcoin"       # coingecko
 
 WALLET_ACTIVE="600" # when coins are stakeable
 WALLET_NAME="FreedomCoin"
